--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,8 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+      HTML Template, will be empty if opened directly in browser.
+      Page generated through index.js.
 
       You can add webfonts, meta tags, or analytics to this file.
       The build step will place the bundled scripts into the <body> tag.
